--- a/02_Neural_Network_Classification_with_Pytorch.ipynb
+++ b/02_Neural_Network_Classification_with_Pytorch.ipynb
@@ -3375,7 +3375,7 @@
         "id": "uFQH_doW0bBz",
         "outputId": "f7130f6a-9083-47f1-ede2-13071caf21f4"
       },
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -3479,7 +3479,13 @@
             "      Successfully uninstalled nvidia-cusparse-cu12-12.5.1.3\n",
             "  Attempting uninstall: nvidia-cudnn-cu12\n",
             "    Found existing installation: nvidia-cudnn-cu12 9.3.0.75\n",
-            "    Uninstalling nvidia-cudnn-cu12-9.3.0.75:\n"
+            "    Uninstalling nvidia-cudnn-cu12-9.3.0.75:\n",
+            "      Successfully uninstalled nvidia-cudnn-cu12-9.3.0.75\n",
+            "  Attempting uninstall: nvidia-cusolver-cu12\n",
+            "    Found existing installation: nvidia-cusolver-cu12 11.6.3.83\n",
+            "    Uninstalling nvidia-cusolver-cu12-11.6.3.83:\n",
+            "      Successfully uninstalled nvidia-cusolver-cu12-11.6.3.83\n",
+            "Successfully installed lightning-utilities-0.14.1 nvidia-cublas-cu12-12.4.5.8 nvidia-cuda-cupti-cu12-12.4.127 nvidia-cuda-nvrtc-cu12-12.4.127 nvidia-cuda-runtime-cu12-12.4.127 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.2.1.3 nvidia-curand-cu12-10.3.5.147 nvidia-cusolver-cu12-11.6.1.9 nvidia-cusparse-cu12-12.3.1.170 nvidia-nvjitlink-cu12-12.4.127 torchmetrics-1.6.3\n"
           ]
         }
       ]
@@ -3496,10 +3502,27 @@
         "torchmetric_accuracy(y_preds, y_blob_test)"
       ],
       "metadata": {
-        "id": "fYDgTRx_0iDj"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 223
+        },
+        "id": "fYDgTRx_0iDj",
+        "outputId": "afa55e07-5b65-4c5d-ee3a-a68a1735eb40"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "Accuracy.__new__() missing 1 required positional argument: 'task'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-81-9f74d11da202>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Setup metric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtorchmetric_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAccuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Calculuate accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: Accuracy.__new__() missing 1 required positional argument: 'task'"
+          ]
+        }
+      ]
     }
   ]
 }
